--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body {
 .mb-3 {
   margin-bottom: 40px;
 }
+ul,
+li {
+  list-style-type: none !important;
+}
 
 .page {
   position: absolute;
@@ -160,6 +164,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+  min-width: 500px;
   transform: translate(-50%, -50%);
   background-color: #fff;
   padding: 20px;
@@ -167,6 +172,17 @@ body {
 }
 .modal-body {
   padding: 20px 0 0 0;
+}
+.submit-btn {
+  background-color: #375500;
+  border: none;
+  color: #fff;
+  padding: 15px;
+  border-radius: 10px;
+}
+.submit-btn:hover {
+  cursor: pointer;
+  background-color: #375500d7;
 }
 /* Style for the close button */
 .close-button {
