input field design update

--- a/style.css
+++ b/style.css
@@ -170,14 +170,20 @@ li {
   padding: 20px;
   border-radius: 5px;
 }
+.input-file-form {
+  display: flex;
+  justify-content: space-between;
+}
 .modal-body {
   padding: 20px 0 0 0;
 }
+
 .submit-btn {
   background-color: #375500;
   border: none;
   color: #fff;
-  padding: 15px;
+  padding: 12px;
+  height: fit-content;
   border-radius: 10px;
 }
 .submit-btn:hover {
